Remove submit button

--- a/app/views/exchanges/_exchange_box.html.erb
+++ b/app/views/exchanges/_exchange_box.html.erb
@@ -14,10 +14,10 @@
          </div>
 
          <div class='form-group'>
-          <%= f.number_field 'amount', id: 'amount', class: 'form-control', placeholder: 'Quantidade ($10)', step: 'any', required: true %>
+          <%= f.number_field 'amount', id: 'amount', class: 'form-control', placeholder: 'Quantidade ($10)', min: '1', step: 'any', required: true %>
          </div>
        </div>
-     
+
        <div class='destination_currency'>
          <div class='form-group'>
            <p class='title'>Moeda Pretendida</p>
@@ -26,9 +26,6 @@
          <div class='form-group'>
            <input type='text' id='result' name='result' class='form-control' placeholder='Resultado' readonly>
          </div>
-       </div>
-       <div>
-        <%= f.submit "CONVERTER", class: 'btn btn-primary btn-exchange col-md-12' %>
        </div>
     <% end %>
    </div>
