--- a/app/views/exchanges/_exchange_box.html.erb
+++ b/app/views/exchanges/_exchange_box.html.erb
@@ -18,6 +18,8 @@
          </div>
        </div>
 
+       <%= link_to 'reverse', '#', id: 'reverse' %>
+
        <div class='destination_currency'>
          <div class='form-group'>
            <p class='title'>Moeda Pretendida</p>
